# FastApi-App-Clone-Twitter

./: README.md  docker-compose.yaml  pyproject.toml
front/: Dockerfile  nginx.conf
src/: Dockerfile  app.py  pyproject.toml
src/controllers/: media_controller.py  tweets_controller.py  user_controller.py
src/database/: db.py  manager.py  model.py  schemas.py
src/logic/: media_logic.py  tweets_logic.py  users_logic.py
src/logic/decorators/: decorators_user_logic.py  deocrators_tweets_logic.py
src/settings/: config.py  middlewares.py  router.py
src/tests/: conftest.py  test_tweet_logic.py  test_user_logic.py
tests/: Dockerfile  pyproject.toml
tests/test_api/: conftest.py  test_tweet_controller.py  test_user_controller.py
