[tool.poetry]
name = "fastapi-diplom-skillbox"
version = "0.1.0"
description = ""
authors = ["danil <kotikov.lil@bkl.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.1"
pydantic = "^2.8.2"
pyjwt = "^2.8.0"
redis = "^5.0.7"
sqlalchemy = "^2.0.31"
pytest = "^8.3.1"
pydantic-settings = "^2.3.4"
asyncpg = "^0.29.0"
pytest-asyncio = "^0.23.8"
aiohttp = "^3.9.5"
black = "^24.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
